@startuml "Uncoverly Hub - Diagrama de Clases Detallado"

!theme vibrant

' Skin parameters for better readability
skinparam class {
    BackgroundColor PaleGreen
    ArrowColor SeaGreen
    BorderColor SeaGreen
    FontName "Inter"
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Orange
}

' Paquete para las Entidades Principales de la Base de Datos
package "Entities (Firestore Collections)" {

    abstract class User {
        + id: string
        + name: string
        + email: string
        + role: UserRole
        --
        + login()
        + logout()
        + updateProfile()
    }

    class Admin extends User {
        role: "admin"
        --
        + manageUsers()
        + manageGroups()
        + viewAllPQRS()
    }

    class Teacher extends User {
        role: "teacher"
        groupHistory: string[]
        --
        + viewDashboard()
        + createLesson()
        + gradeHomework()
        + manageBank()
        + sendClassLink()
    }

    class Student extends User {
        role: "student"
        plan: StudentPlan
        hasOnboarded: boolean
        level: string
        objective: string
        --
        + completeOnboarding()
        + viewDashboard()
        + createNote()
        + submitHomework()
        + sendPQRS()
    }

    class Group {
        + id: string
        + name: string
        + type: StudentPlan
        + mainObjective: EditorContent
        + weeklyObjectives: EditorContent
    }
    note right of Group
      Contiene toda la información
      y contenido de un curso.
    end note

    class Lesson {
        + id: string
        + name: string
        + number: integer
        + scheduledTime: datetime
        + recording: string
        + content: EditorContent
        + classNote: EditorContent
        + homework: EditorContent
        + comments: EditorContent
    }

    class HomeworkSubmission {
        + id: string
        + submittedAt: datetime
        + files: File[]
        + grade: string
    }

    class StudentNote {
        + id: string
        + title: string
        + content: EditorContent
        + createdAt: datetime
    }

    class PQRSMessage {
        + id: string
        + message: string
        + isAnonymous: boolean
        + createdAt: datetime
    }
    
    class BankCard {
        + id: string
        + type: BankType
        + name: string
        + level: string
        + content: EditorContent
        + fileUrl: string
    }
    note bottom of BankCard
      <b>Permisos:</b>
      - <b>Crear/Editar/Borrar:</b> Solo el Teacher propietario o un Admin.
      - <b>Visualizar:</b> Todos los roles (Student, Teacher, Admin).
    end note
    
    class EditorContent <<DataType>> {
      type: "doc"
      content: JSON
    }
}

' Paquete para Servicios y Lógica de Negocio
package "Services (src/lib/firestore.ts)" {
    class FirestoreService {
        + getUserProfile(userId): User
        + updateUserProfile(userId, data)
        + getStudentData(studentId)
        + getTeacherData(teacherId)
        + createGroup(teacher, students)
        + createLesson(groupId, lessonData)
        + updateLesson(groupId, lessonId, data)
        + submitPQRS(pqrsData)
        + getBankCards(type): BankCard[]
        + createBankCard(cardData)
        + updateBankCard(cardId, data)
        + deleteBankCard(cardId)
        + getHomeworkSubmissions(lessonId): HomeworkSubmission[]
        + createOrUpdateHomeworkSubmission(submissionData)
    }
}

' Paquete para Flujos de IA
package "AI Flows (src/ai/flows)" {
    class EditorFlow {
        + generateEditorContent(prompt): string
    }
    
    class ContextualQAFlow {
        + contextualQA(selectedText, userQuery): string
    }
}


' ---- RELACIONES ----

' Relaciones de Herencia de Usuario
Admin --|> User
Teacher --|> User
Student --|> User

' Relaciones de Grupo y sus componentes
Teacher "1" -- "0..*" Group : "enseña en"
Group "1" -- "1..*" Student : "contiene"
Group "1" o-- "0..*" Lesson : "compuesto por"
Lesson "1" *-- "0..*" HomeworkSubmission : "tiene"

' Relaciones de Estudiante
Student "1" -- "0..*" StudentNote : "crea"
Student "1" -- "1" HomeworkSubmission : "entrega"
Student "1" -- "0..*" PQRSMessage : "envía"

' Relaciones de Docente y Admin
Teacher "1" -- "0..*" PQRSMessage : "recibe"
Teacher "1" -- "0..*" BankCard : "crea/posee"
Admin "1" -- "*" BankCard : "gestiona"

' Relaciones de Visualización (uso de notas punteadas)
Student ..> BankCard : "visualiza"
Teacher ..> BankCard : "visualiza"

' Relaciones con el servicio de Firestore
FirestoreService ..> User
FirestoreService ..> Group
FirestoreService ..> Lesson
FirestoreService ..> HomeworkSubmission
FirestoreService ..> StudentNote
FirestoreService ..> PQRSMessage
FirestoreService ..> BankCard

' Relaciones con el contenido del editor
Lesson -- EditorContent
StudentNote -- EditorContent
BankCard -- EditorContent
Group -- EditorContent

' Relaciones con Flujos de IA
EditorFlow ..> EditorContent : "genera"
ContextualQAFlow ..> EditorContent : "explica/responde sobre"

@enduml
